Fix GitHub Actions permissions for publish_release

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -30,6 +30,9 @@ jobs:
     needs:
       - build_installer
       - build_thirdparty
+    permissions:
+      contents: write
+      actions: read
     steps:
 
       # ビルド済みのインストーラーとサードパーティーライブラリをダウンロード
