--- a/.github/workflows/build_thirdparty.yaml
+++ b/.github/workflows/build_thirdparty.yaml
@@ -46,7 +46,8 @@ jobs:
       - name: Archive Thirdparty Libraries
         run: |
           cd server/thirdparty
-          if ((Get-ChildItem -Force | Measure-Object).Count -gt 0) {
+          $files = Get-ChildItem -Force
+          if ($files.Count -gt 0) {
             7z a -t7z -mx=9 ../thirdparty-windows.7z *
           } else {
             echo "No files to archive, creating empty archive"
