Fix update-thirdparty task: remove hardcoded latest argument

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,7 +9,7 @@ serve = "python KonomiTV.py"
 dev = "python KonomiTV.py --reload"
 lint = "ruff check --fix . ; pyright"
 typecheck = "pyright"
-update-thirdparty = "python -m misc.UpdateThirdparty latest"
+update-thirdparty = "python -m misc.UpdateThirdparty"
 build-and-serve = "cd ../client && yarn build && cd ../server && python KonomiTV.py"
 
 [tool.poetry.dependencies]
