--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -92,7 +92,8 @@ jobs:
           GIT_COMMITTER_NAME: "GitHub Actions"
           GIT_COMMITTER_EMAIL: "actions@github.com"
         run: |
-          git checkout release
+          git branch -D release || true
+          git checkout -b release origin/release
           git tag v${{ steps.get_version.outputs.version }} release
           git push origin --tags
 
