Update build_thirdparty.yaml to match upstream and add master branch exclusion note

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ server/logs/*
 *.swp
 *.swo
 *~
+
+# Exclude master branch from being pushed
+# This prevents accidental pushes to master branch
+# Use release branch for releases instead
