--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -83,42 +83,21 @@ jobs:
         run: |
           echo version=$(echo "$COMMIT_MESSAGE" | sed -e 's/Release: version //') >> $GITHUB_OUTPUT
 
-      # Delete existing tag if it exists
-      - name: Delete Existing Tag
+      # リリースコミットに対応する新バージョンのタグを release ブランチで作成
+      - name: Create New Version Tag
         working-directory: KonomiTV
         run: |
-          # Delete existing tag if it exists
-          if git tag -l | grep -q "v${{ steps.get_version.outputs.version }}"; then
-            echo "Tag v${{ steps.get_version.outputs.version }} already exists, deleting..."
-            git tag -d v${{ steps.get_version.outputs.version }} || true
-            git push origin --delete v${{ steps.get_version.outputs.version }} || true
-          else
-            echo "Tag v${{ steps.get_version.outputs.version }} does not exist, skipping deletion"
-          fi
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git switch release
+          git tag v${{ steps.get_version.outputs.version }} release
+          git push origin --tags
 
       # リリースを作成
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: v${{ steps.get_version.outputs.version }}
-          name: Release v${{ steps.get_version.outputs.version }}
-          body: |
-            KonomiTV v${{ steps.get_version.outputs.version }} をリリースしました。
-
-            **変更点:**
-            - BDライブラリ機能の追加
-            - インストーラーの改善
-            - その他バグ修正とパフォーマンス向上
-          artifacts: |
-            KonomiTV-Installer.exe
-            KonomiTV-Installer.elf
-            KonomiTV-Installer-ARM.elf
-            thirdparty-windows.7z
-            thirdparty-linux.tar.xz
-            thirdparty-linux-arm.tar.xz
-          allowUpdates: true
-          draft: false
-          prerelease: false
+          artifacts: 'KonomiTV-Installer.exe,KonomiTV-Installer.elf,KonomiTV-Installer-ARM.elf,thirdparty-windows.7z,thirdparty-linux.tar.xz,thirdparty-linux-arm.tar.xz'
           generateReleaseNotes: true
-          makeLatest: true
+          name: KonomiTV (β) ${{ steps.get_version.outputs.version }}
+          tag: v${{ steps.get_version.outputs.version }}
